# semver

./: .gitignore  CMakeLists.txt  README.md  poac.yml
.github/workflows/: ccpp.yml
include/: semver.hpp
include/semver/: comparison.hpp  interval.hpp  io.hpp  parser.hpp  semver.hpp  version.hpp
include/semver/parser/: lexer.hpp  parser.hpp  range.hpp
tests/: interval.cpp  lexer.cpp  parser.cpp  token.cpp  version.cpp
